--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
                     <h2 class="h2 text-center text-dark mb-3">Sign In</h2>
                     <div class="form-group">
                         <input type="email" class="form-control" id="userSIEmail" onkeyup="checkUserSIEmail()"placeholder="Email adress">
-                        <small id="userSIEmailError" class="form-text text-danger">Please check your login information.</small>
+                        <small id="userSIEmailError" class="form-text text-danger" hidden>Please check your login information.</small>
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" id="userSIPassword" onkeyup="checkUserSIPassword()" placeholder="Password">
-                        <small id="userSIPasswordError" class="form-text text-danger">Please check your password.</small>
+                        <small id="userSIPasswordError" class="form-text text-danger" hidden>Please check your password.</small>
                     </div>
                     <button type="button" class="btn btn-outline-primary text-uppercase mb-3" onclick="signIn()">Sign In</button>
                     <p>Not a member yet? Become a member: <a href="./views/signup.html"><strong class="text-primary text-uppercase showSignUpForm">Sign Up</strong></a></p>
