--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- Nunito Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
     <!-- Firebase JS SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
-    <script src="./script/firebase.js"></script>
+    <script src="../script/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
     <title>My Simple Dashboard</title>
@@ -36,7 +36,7 @@
                         <small id="userSIPasswordError" class="form-text text-danger" hidden>Please check your password.</small>
                     </div>
                     <button type="button" class="btn btn-outline-primary text-uppercase mb-3" onclick="signIn()">Sign In</button>
-                    <p>Not a member yet? Become a member: <a href="./views/signup.html"><strong class="text-primary text-uppercase showSignUpForm">Sign Up</strong></a></p>
+                    <p>Not a member yet? Become a member: <a href="../views/signup.html"><strong class="text-primary text-uppercase showSignUpForm">Sign Up</strong></a></p>
                     <div id="firebaseui-auth-container"></div>
                     <div id="loader">Loading...</div>
                 </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- Custom JavaScript -->
-    <script data-main="./server" src="./script/auth.js"></script>
-    <script data-main="./server" src="./script/script.js"></script>
+    <script data-main="../server" src="../script/auth.js"></script>
+    <script data-main="../server" src="../script/script.js"></script>
 </body>
 </html> 
