--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- Firebase JS SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth-compat.js"></script>
-    <script src="../script/firebase.js"></script>
+    <script src="./script/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
     <title>My Simple Dashboard</title>
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- Custom JavaScript -->
-    <script data-main="../server" src="../script/auth.js"></script>
-    <script data-main="../server" src="../script/script.js"></script>
+    <script data-main="./server" src="./script/auth.js"></script>
+    <script data-main="./server" src="./script/script.js"></script>
 </body>
 </html> 
