--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                         <small id="userSIPasswordError" class="form-text text-danger" hidden>Please check your password.</small>
                     </div>
                     <button type="button" class="btn btn-outline-primary text-uppercase mb-3" onclick="signIn()">Sign In</button>
-                    <p>Not a member yet? Become a member: <a href="../views/signup.html"><strong class="text-primary text-uppercase showSignUpForm">Sign Up</strong></a></p>
+                    <p>Not a member yet? Become a member: <a href="./views/signup.html"><strong class="text-primary text-uppercase showSignUpForm">Sign Up</strong></a></p>
                     <div id="firebaseui-auth-container"></div>
                     <div id="loader">Loading...</div>
                 </div>
