--- a/public/404.html
+++ b/public/404.html
@@ -26,7 +26,7 @@
       <h2>404</h2>
       <h1>Page Not Found</h1>
       <p>The specified file was not found on this website. Please check the URL for mistakes and try again.</p>
-      <h3><a href="/">Back to home</a></h3>
+      <a href="/dashboard">Back to home</a>
     </div>
   </body>
 </html>
