--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=/board">
-    <title>index</title>
+    <meta http-equiv="refresh" content="0; URL=/dashboard">
 </head>
 <body>
     <script type="text/javascript">
-        window.location.href = "/board";
+        window.location.href = "/dashboard";
     </script>
 </body>
 </html> 
