--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; URL=/dashboard">
+    <meta http-equiv="refresh" content="0; URL=/index">
 </head>
 <body>
     <script type="text/javascript">
-        window.location.href = "/dashboard";
+        window.location.href = "/index";
     </script>
 </body>
 </html> 
